# rf_detr_detection

./: CMakeLists.txt  ReadMe.md  package.xml
config/: qos_override_offline.yaml
include/rf_detr_detection/: rf_detr_detection.hpp
launch/: rf_detr_detection_carla_launch.py  rf_detr_detection_kitti_launch.py  rf_detr_detection_launch.py  rf_detr_detection_rviz_launch.py
param/: rf_detr_detection.yaml
rviz/: rf_detr_detection.rviz  rf_detr_detection_carla.rviz  rf_detr_detection_kitti.rviz
src/: rf_detr_detection.cpp  rf_detr_detection_node.cpp
